terraform/dev/landingpages.launchtemplate.tf
// resource "aws_launch_template" "landingpages" {
//   name_prefix   = "landingpage-dev"
// image_id      = var.instance_ami // aws_intance.ami
//   instance_type = var.instance_type // aws_instance.instance_type

//   tags = {
//     Terraform = "true"
//   }
// }
